--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sweetalert": "^2.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "emotion": "~9.1.2",
+    "global": "~4.3.2",
+    "intersection-observer": "~0.5.0",
+    "prop-types": "~15.6.1",
+    "react-intersection-observer": "~3.0.3",
+    "react-motion": "~0.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
