--- a/package.json
+++ b/package.json
@@ -7,21 +7,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "3",
     "firebase": "^8.10.0",
     "material-ui": "^1.0.0-beta.47",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sweetalert": "^2.1.2",
-    "web-vitals": "^1.0.1",
-    "emotion": "~9.1.2",
-    "global": "~4.3.2",
-    "intersection-observer": "~0.5.0",
-    "prop-types": "~15.6.1",
-    "react-intersection-observer": "~3.0.3",
-    "react-motion": "~0.5.2"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
