--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "bootstrap": "3",
+    "bootstrap": "5.1.0",
     "firebase": "^8.10.0",
     "material-ui": "^1.0.0-beta.47",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -19,6 +20,7 @@
     "react-scripts": "4.0.3",
     "rodal": "^1.8.1",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.1.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
